2003-09-25  JP Rosevear <jpr@ximian.com>

	* pcs/cal.c (cal_notify_default_object): send back the empty
	string if the object is NULL
	(cal_notify_object): ditto

2003-09-25  JP Rosevear <jpr@ximian.com>

	* gui/comp-editor-factory.c (edit_existing): convert to api
	changes

	* conduits/todo/todo-conduit.c (local_record_from_uid): ditto
	(pre_sync): ditto

	* conduits/calendar/calendar-conduit.c (local_record_from_uid):
	ditto
	(pre_sync): ditto

	* importers/icalendar-importer.c (update_single_object): ditto

	* gui/dialogs/comp-editor.c (obj_updated_cb): ditto

	* gui/e-itip-control.c (get_real_item): ditto
	(find_server): ditto

	* gui/comp-util.c (cal_comp_is_on_server): ditto
	(cal_comp_event_new_with_defaults): ditto
	(cal_comp_task_new_with_defaults): ditto

	* cal-client/cal-listener.h: add signals

	* cal-client/cal-listener.c (impl_notifyDefaultObjectRequested):
	implement
	(impl_notifyObjectRequested): ditto
	(cal_listener_class_init): set above epv implementations, add signals

	* cal-client/cal-client.h: update protos

	* cal-client/cal-client.c (cal_default_object_requested_cb): get
	default object callback
	(cal_object_requested_cb): get object callback
	(cal_client_init): listen for get and get default object signals
	(cal_client_get_default_object): convert to new sync api
	(cal_client_get_object): ditto

	* pcs/cal.h: add protos

	* pcs/cal.c (impl_Cal_getDefaultObject): just call the backend, it
	does the notification now
	(impl_Cal_getObject): ditto
	(cal_notify_default_object): do getDefaultObject response
	(cal_notify_object): do getObject response

	* pcs/cal-backend.h: remove vmethods, protos

	* pcs/cal-backend.c: remove a couple of dead functions
	(cal_backend_class_init): get_object_component is no longer a
	vmethod
	(cal_backend_get_default_object): call through
	(cal_backend_get_object): ditto

	* pcs/cal-backend-sync.h: add protos, vmethods

	* pcs/cal-backend-sync.c (cal_backend_sync_get_default_object):
	call through